[package]
name = "web-host"
version = { workspace = true }
edition = "2024"
rust-version = { workspace = true }
license = "GPL-3.0-only"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
smoo-host-core = { path = "../../crates/smoo-host-core" }
smoo-host-blocksource-http = { path = "../../crates/smoo-host-blocksource-http", default-features = false, features = ["wasm-client"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = [
    "Window",
    "Navigator",
    "Performance",
    "PerformanceTiming",
    "Usb",
    "UsbConfiguration",
    "UsbAlternateInterface",
    "UsbInterface",
    "UsbEndpoint",
    "UsbDevice",
    "UsbInTransferResult",
    "UsbOutTransferResult",
    "UsbControlTransferParameters",
    "UsbRequestType",
    "UsbRecipient",
    "UsbTransferStatus",
    "console",
] }
js-sys = { workspace = true }
console_error_panic_hook = "0.1.7"
url = { workspace = true }
tracing = { version = "0.1.41", features = ["release_max_level_debug"] }
tracing-wasm = "0.2.1"
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "ansi",
    "fmt",
    "registry",
    "std",
] }
futures-util = { workspace = true, features = ["std"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
smoo-host-webusb = { path = "../../crates/smoo-host-webusb" }

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
source-map = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O"]
source-map = true
